# deceptaio

./: .gitignore  LICENSE  README.md  pyproject.toml
src/deceptaio/: __init__.py  jobs.py  messaging.py  network.py  queue.py  socket.py  vars.py
