[project]
name = "deceptaio"
version = "0.0.1"
authors = [
  { name="Deceptio", email="deceptio@proton.me" },
]
description = "Miscellaneous asyncio wrappers / tools"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DrDeceptio/deceptaio"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/deceptaio"]
